# OpenCv-ComputacionGrafica

./: CMakeLists.txt  README.md  _GENERATE_VS2019_x86.bat  clean.sh  compile.sh
data/: LenaSaltPepper.jfif
src/: CMakeLists.txt
src/Project_01/: CMakeLists.txt  README.md  main.cpp
src/Project_02/: CMakeLists.txt  README.md  main.cpp
src/Project_03/: CMakeLists.txt  README.md  main.cpp
